--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1068,6 +1068,8 @@
   "boilerplate.containers.Payroll.HumanResources.planedManPower": "Planed ManPower",
   "boilerplate.containers.Payroll.HumanResources.vacancies": "Vacancies",
   "boilerplate.containers.Payroll.HumanResources.percent": "Percent",
+  "boilerplate.containers.Payroll.HumanResources.calculate": "Calculate",
+  "boilerplate.containers.Payroll.HumanResources.otherDeductionValue": "Other Deduction",
   "boilerplate.containers.Payroll.HumanResources.actualManPower": "Actual ManPower",
 
   
@@ -1801,7 +1803,8 @@
     "boilerplate.containers.Payroll.Payroll.lineNo": "Line No",
     "boilerplate.containers.Payroll.Payroll.isPaid": "Paid",    
     "boilerplate.containers.Payroll.Payroll.post": "Delay",
-    "boilerplate.containers.Payroll.Payroll.recalculate": "ReCalculate ",    
+    "boilerplate.containers.Payroll.Payroll.recalculate": "ReCalculate ", 
+    "boilerplate.containers.Payroll.Payroll.cashPaid": "cashPaid",   
     "boilerplate.containers.Payroll.Payroll.LoanTrxCreateTitle": "Add Loan",
     "boilerplate.containers.Payroll.Payroll.LoanTrxUpdateTitle": "Update Loan",
     
