FEATURE: Training - Test - create "test" page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -3054,6 +3054,7 @@
   "boilerplate.containers.Payroll.training.expirationDays": "Expiration Days",
   "boilerplate.containers.Payroll.training.open": "Open",
   "boilerplate.containers.Payroll.training.isClose": "Is Close",
+  "boilerplate.containers.Payroll.training.backToTest": "Back To Test",
   "boilerplate.containers.Payroll.training.grade": "Grade",
   "boilerplate.containers.Payroll.training.correctChoice": "Correct Choice",
   "boilerplate.containers.Payroll.training.choice": "Choice"
