--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -3061,6 +3061,7 @@
   "boilerplate.containers.Payroll.training.isClose": "Is Close",
   "boilerplate.containers.Payroll.training.backToTest": "Back To Test",
   "boilerplate.containers.Payroll.training.grade": "Grade",
+  "boilerplate.containers.Payroll.training.totalGrade": "Total Grade",
   "boilerplate.containers.Payroll.training.correctChoice": "Correct Choice",
   "boilerplate.containers.Payroll.training.choice": "Choice"
 }
