update BranchSalary Settitng

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1797,6 +1797,8 @@
     "boilerplate.containers.Payroll.Payroll.elementMode": "طبيعة العنصر",
     "boilerplate.containers.Payroll.Payroll.CalcMethod": "طريقة الحساب",
     "boilerplate.containers.Payroll.Payroll.NewEmpDedEl": "عنصر خصم الموظف الجديد",
+    "boilerplate.containers.Payroll.Payroll.GrossElement": "عنصر فرق الاستحقاق",
+    
     "boilerplate.containers.Payroll.Payroll.MedInsElement": "عنصر خصم التأمين ",
     
     "boilerplate.containers.Payroll.Payroll.source": "المصدر",
