--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1791,6 +1791,7 @@
     "boilerplate.containers.Payroll.Payroll.elementMode": "Elment Mode",   
     "boilerplate.containers.Payroll.Payroll.CalcMethod": "Calc Method",
     "boilerplate.containers.Payroll.Payroll.NewEmpDedEl": "New Emp Deduction Element",
+    "boilerplate.containers.Payroll.Payroll.GrossElement": "Gross Element",
     "boilerplate.containers.Payroll.Payroll.MedInsElement": "Medical Ins Element",
      
     "boilerplate.containers.Payroll.Payroll.source": "Source",    
