--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1819,7 +1819,7 @@
 
   "boilerplate.containers.Payroll.Payroll.payrollMainParameters": "Payroll Main Parameters",
   "boilerplate.containers.Payroll.Payroll.Department": "Department",
-  "boilerplate.containers.Payroll.Payroll.TaxeParameters": "Taxe Parameters",
+  "boilerplate.containers.Payroll.Payroll.TaxeParameters": "Tax Parameters",
   "boilerplate.containers.Payroll.Payroll.PersonalExemption": "Personal Exemption",
   "boilerplate.containers.Payroll.Payroll.specialNeedsExemption": "Special Needs Exemption",
   "boilerplate.containers.Payroll.Payroll.FirstBracketLimit": "First Bracket Limit",
@@ -2019,6 +2019,7 @@
   "boilerplate.containers.Payroll.Employee.salary.salaryStructure": "Salary Structure",
   "boilerplate.containers.Payroll.Employee.salary.isBnkTransfer": "Bank Transfer",
   "boilerplate.containers.Payroll.Employee.salary.taxable": "Taxable",
+  "boilerplate.containers.Payroll.Employee.salary.isNet": "Is Net salary",
   "boilerplate.containers.Payroll.Employee.salary.identitynumberShouldBe": "Identity Number Should Be ",
   "boilerplate.containers.Payroll.Employee.salary.consultant": "Consultant",
   "boilerplate.containers.Payroll.Employee.salary.isHours": "Salary On Working Hours",
@@ -3010,6 +3011,7 @@
   "boilerplate.containers.Payroll.training.date": "Date",
   "boilerplate.containers.Payroll.training.functionName": "Function",
   "boilerplate.containers.Payroll.training.employeeName": "Employee",
+  "boilerplate.containers.Payroll.training.creatTraining": "Create Training",
   "boilerplate.containers.Payroll.training.employeeId": "Id",
   "boilerplate.containers.Payroll.training.courseId": "Id",
   "boilerplate.containers.Payroll.training.notes": "Notes",  
