IMPROVE: Training - TrTrainingTrxList - add functionality to "create test" button

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -3079,7 +3079,8 @@
   "boilerplate.containers.Payroll.training.reviewTest": "مراحعة الاختبار",
   "boilerplate.containers.Payroll.training.repeatTest": "اعادة الاختبار",
   "boilerplate.containers.Payroll.training.createTest": "انشاء الاختبار",
-  "boilerplate.containers.Payroll.training.testIsReview": "testIsReview",
+  "boilerplate.containers.Payroll.training.editTest": "تعديل الاختبار",
+  "boilerplate.containers.Payroll.training.testIsReview": "تمت مراجعة الاختبار",
   "boilerplate.containers.Payroll.training.expirationDate": "تاريخ انتهاء الصلاحية",
   "boilerplate.containers.Payroll.training.courseExpiration": "انتهاء الكورس",
   "boilerplate.containers.Payroll.training.trainerName": "اسم المدرب",
