FEATURE: Training - EmployeeTrainingReport - create "EmployeeTrainingReport" page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -3072,7 +3072,7 @@
   "boilerplate.containers.Payroll.training.functionsRequestSentSuccessfully": "تم إرسال طلب الوظائف بنجاح",
   "boilerplate.containers.Payroll.training.courseName": "اسم الكورس",
   "boilerplate.containers.Payroll.training.isAssigned": "تم وضع تدريب",
-  "boilerplate.containers.Payroll.training.surveyDone": "surveyDone",
+  "boilerplate.containers.Payroll.training.surveyDone": "تم الانتهاء من الاستبيان",
   "boilerplate.containers.Payroll.training.testGrade": "الدرجة",
   "boilerplate.containers.Payroll.training.evaluate": "Evaluate",
   "boilerplate.containers.Payroll.training.test": "الاختبار",
@@ -3095,6 +3095,10 @@
   "boilerplate.containers.Payroll.training.notQualified": "غير مؤهل",
   "boilerplate.containers.Payroll.training.expirationDays": "عدد أيام الانتهاء",
   "boilerplate.containers.Payroll.training.open": "فتح",
+  "boilerplate.containers.Payroll.training.employeeSurvey": "الاستبيان للموظف",
+  "boilerplate.containers.Payroll.training.trainerSurvey": "الاستبيان للمدرب",
+  "boilerplate.containers.Payroll.training.viewTest": "عرض الاختبار",
+  "boilerplate.containers.Payroll.training.testDone": "تم الانتهاء من الاختبار",
   "boilerplate.containers.Payroll.training.backToTest": "العودة إلى الاختبار",
   "boilerplate.containers.Payroll.training.isClose": "مغلق",
   "boilerplate.containers.Payroll.training.grade": "تقدير",
