--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -3064,6 +3064,10 @@
   "boilerplate.containers.Payroll.training.notQualified": "Not Qualified",
   "boilerplate.containers.Payroll.training.expirationDays": "Expiration Days",
   "boilerplate.containers.Payroll.training.open": "Open",
+  "boilerplate.containers.Payroll.training.employeeSurvey": "Employee Survey",
+  "boilerplate.containers.Payroll.training.trainerSurvey": "Trainer Survey",
+  "boilerplate.containers.Payroll.training.viewTest": "View Test",
+  "boilerplate.containers.Payroll.training.testDone": "Test Done",
   "boilerplate.containers.Payroll.training.isClose": "Is Close",
   "boilerplate.containers.Payroll.training.backToTest": "Back To Test",
   "boilerplate.containers.Payroll.training.grade": "Grade",
