IMPROVE: Social insurance - Add filter highlights to PayrollTable

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2494,6 +2494,9 @@
   "boilerplate.containers.Payroll.insurance.government": "المحافظة",
   "boilerplate.containers.Payroll.insurance.ownerName": "اسم المالك",
   "boilerplate.containers.Payroll.insurance.actions": "الاجراءت",
+  "boilerplate.containers.Payroll.insurance.isDelete": "تم الحذف",
+  "boilerplate.containers.Payroll.insurance.joinSocialInsurance": "تم الانضمام إلى التأمين",
+  "boilerplate.containers.Payroll.insurance.existInsurance": "تم الخروج من التأمين",
   "boilerplate.containers.Payroll.insurance.enName": "الاسم بالانجليزية",
   "boilerplate.containers.Payroll.insurance.socialInsuranceNumberMustBeLessThan20Number": "يجب أن يكون رقم التأمين الاجتماعي أقل من 20 رقم",
   "boilerplate.containers.Payroll.insurance.arName": "الاسم بالعربية",
