--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2466,6 +2466,9 @@
   "boilerplate.containers.Payroll.insurance.60AndUp": "60 And Up",
   "boilerplate.containers.Payroll.insurance.lessThan60": "Less than 60",
   "boilerplate.containers.Payroll.insurance.employeeAgeAtEndOfMonth": "Employee Age At End Of Month",
+  "boilerplate.containers.Payroll.insurance.notDelete": "Not Delete",
+  "boilerplate.containers.Payroll.insurance.joinSocialInsurance": "Join Social Insurance",
+  "boilerplate.containers.Payroll.insurance.existInsurance": "Exist Insurance",
   "boilerplate.containers.Payroll.insurance.age": "Age",
   "boilerplate.containers.Payroll.insurance.socialInsuranceNumberMustBeLessThan20Number": "Social Insurance Number Must Be Less Than 20 Number",
   "boilerplate.containers.Payroll.insurance.year": "Year",
