--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -688,7 +688,7 @@
   "boilerplate.containers.Payroll.salary": "الراتب",
   "boilerplate.containers.Payroll.minDate": "اقل تاريخ",
   "boilerplate.containers.Payroll.maxDate": "اعلي تاريخ",
-  "boilerplate.containers.Payroll.id": "كود الموظف",
+  "boilerplate.containers.Payroll.id": "الكود" ,
   "boilerplate.containers.Payroll.trxId": "كود الحركة",  
   "boilerplate.containers.Payroll.code": "الكود",
   "boilerplate.containers.Payroll.addTraining": "اضافة تدريب",  
