finish update in EmploymentRequestCreate page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2667,6 +2667,9 @@
   "boilerplate.containers.Payroll.recruitment.languages": "اللغات",
   "boilerplate.containers.Payroll.recruitment.otherLanguage": "لغة أخرى",
   "boilerplate.containers.Payroll.recruitment.languageInfo": "يرجى تحديد اللغة المطلوبة وتحديد المستوى المطلوب",
+  "boilerplate.containers.Payroll.recruitment.noLanguage": "لا توجد لغة",
+  "boilerplate.containers.Payroll.recruitment.addLang": "اضافة لغة",
+  "boilerplate.containers.Payroll.recruitment.editLang": "تعديل لغة",
   "boilerplate.containers.Payroll.recruitment.jobSpecifications": "مواصفات الوظيفة",
   "boilerplate.containers.Payroll.recruitment.positionType": "نوع الوظيفة",
   "boilerplate.containers.Payroll.recruitment.male": "ذكر",
