Add Permisiion minimum

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1127,12 +1127,14 @@
   "boilerplate.containers.Payroll.Attendance.calcMinus": "احتساب متمم",
   "boilerplate.containers.Payroll.Attendance.dedRased": "خصم من الرصيد",
   "boilerplate.containers.Payroll.Attendance.maxMinutesCountIs": "الحد الأقصى لعدد الدقائق هو ",
+  "boilerplate.containers.Payroll.Attendance.minMinutesCountIs": "الحد الادنى لعدد الدقائق هو ",
   "boilerplate.containers.Payroll.Attendance.maxMinutesCountMustToBeGreaterThan": "يجب أن يكون الحد الأقصى لعدد الدقائق أكبر من 0 ",
   "boilerplate.containers.Payroll.Attendance.maxRepeatedPermissionIs": "الحد الأقصى للإذن المتكرر هو ",
   "boilerplate.containers.Payroll.Attendance.isDeducted": "تخصم من المرتب",
   "boilerplate.containers.Payroll.Attendance.deductedValue": "قيمة الخصم",
   "boilerplate.containers.Payroll.Attendance.maxRepeated": "الحد الاقصى للتكرار",
-  "boilerplate.containers.Payroll.Attendance.maxMinuteNo": "عدد دقائق الاذن",
+  "boilerplate.containers.Payroll.Attendance.maxMinuteNo": "الحد الاقصى للدقائق",
+  "boilerplate.containers.Payroll.Attendance.minMinuteNo": "الحد الادنى للدقائق",
   "boilerplate.containers.Payroll.Attendance.isDeductAnnual": "خصم من السنوى",
   "boilerplate.containers.Payroll.Attendance.isBetweenDay": "اذن خلال اليوم",
   "boilerplate.containers.Payroll.Attendance.isConfilctWithVac": "تتعارض مع اجازة نصف يوم",
