--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1119,6 +1119,7 @@
   "boilerplate.containers.Payroll.Attendance.calcMinus": "Minus Calulation",
   "boilerplate.containers.Payroll.Attendance.dedRased": "Rased Deduction",
   "boilerplate.containers.Payroll.Attendance.maxMinutesCountIs": "Max minutes count is ",
+  "boilerplate.containers.Payroll.Attendance.minMinutesCountIs": "Min minutes count is ",
   "boilerplate.containers.Payroll.Attendance.maxMinutesCountMustToBeGreaterThan": "Max minutes count must to be greater then 0 ",
   "boilerplate.containers.Payroll.Attendance.maxRepeatedPermissionIs": "Max repeated Permission is ",
 
@@ -1126,6 +1127,7 @@
   "boilerplate.containers.Payroll.Attendance.deductedValue": "Deducted Value",
   "boilerplate.containers.Payroll.Attendance.maxRepeated": "Max Repeated",
   "boilerplate.containers.Payroll.Attendance.maxMinuteNo": "Max Minute No",
+  "boilerplate.containers.Payroll.Attendance.minMinuteNo": "Minimum Minute No",
   "boilerplate.containers.Payroll.Attendance.isDeductAnnual": "Is Deduct Annual",
   
   "boilerplate.containers.Payroll.Attendance.isBetweenDay": "Is during Day",
